overlays/dc1tbopp/route.yaml
# HTTPS Route on dc1tbopp apps domain (edit if your *.apps DNS differs).
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: regional-dr-test
spec:
  host: regional-dr-test.apps.dc1tbopp.ptt.gov.tr
  to:
    kind: Service
    name: regional-dr-test
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
